...
        { position: 'absolute', paddingTop: insets.top },
        animatedStyle,
      ]}
    >
      <View style={styles.iconButtonContainerStyle}>
        <IconButton
          testID="miniplayer-collapse"
          icon="arrow-collapse"
          size={40}
          iconColor={playerStyle.colors.primary}
          onPress={collapse}
        />
      </View>
...
