...

  return (
    <View style={styles.container}>
      <TextInput style={styles.hidden} />
      <View style={styles.searchContainer}>
        <AutoComplete
          testID="BiliSearchBar"
          pressed={pressed}
          placeholder={t('BiliSearchBar.label')}
          value={searchVal}
          setValue={setSearchVal}
          onSubmit={performSearch}
          onIconPress={handleMenuPress}
...
