export enum NoxRoutes {
  PlayerHome = 'NoxHome',
  Settings = 'NoxSettings',
  PlayerCover = 'NoxCover',
  Playlist = 'NoxPlaylist',
  PlaylistsDrawer = 'NoxPlaylists',
  UserLogin = 'NoxLogin',
  Explore = 'NoxExplore',
  Lyrics = 'NoxLyrics',
  Artist = 'NoxArtist',
}

export enum NoxSheetRoutes {
  SongMenuSheet = 'NoxSongMenuSheet',
  PlaylistMenuSheet = 'NoxPlaylistMenuSheet',
  SongsMenuInListSheet = 'NoxSongsMenuInListSheet',
  LyricSheet = 'NoxLyricSheet',
}
