...
  deleteCallback: (id: string) => void,
) => {
  const playerStyle = useNoxSetting(state => state.playerStyle);

  return (
    <IconButton
      testID="playlist-item-delete-button"
      icon="close"
      onPress={() => deleteCallback(item.id)}
      size={25}
      iconColor={playerStyle.colors.primary}
    />
  );
...
