...
const SearchPlaylistAsNewButton = ({
  setNewPlaylistDialogOpen,
}: NewButtonProps) => {
  const playerStyle = useNoxSetting(state => state.playerStyle);
  return (
    <IconButton
      testID="search-playlist-as-new-playlist-button"
      icon="new-box"
      size={25}
      iconColor={playerStyle.colors.primary}
      onPress={() => setNewPlaylistDialogOpen(true)}
    />
  );
...
